deploy/overlays/dev/patch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  template:
    spec:
      containers:
        - name: static
          volumeMounts:
            - mountPath: "/var/www/html/static/config/config.js"
              name: config
              subPath: config.js
      volumes:
        - name: config
          configMap:
            name: config
