deploy/overlays/dev/patch/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: dev.k3s-test.local
      http:
        paths:
          - backend:
              serviceName: service
              servicePort: 80
